Bug fix for NameResolution
Fixes a bug related to resolving a partially qualified name which maps
to the enclosing compilation unit.